force-app/main/default/objects/PricebookEntry/fields/Fecha_Vigencia_Desde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vigencia_Desde__c</fullName>
    <label>Fecha Vigencia Desde</label>
    <type>Date</type>
</CustomField>