force-app/main/default/objects/PricebookEntry/fields/Fecha_Vigencia_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vigencia_Hasta__c</fullName>
    <label>Fecha Vigencia Hasta</label>
    <type>Date</type>
</CustomField>