force-app/main/default/objects/PricebookEntry/fields/UMV__c.field-meta.xml
<CustomField>
    <fullName>UMV__c</fullName>
    <label>UMV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>